new proj/src/objects/GE_ES_Custom_Clone__c.object
<CustomObject>
    <fields>
        <fullName>GE_ES_Object_API_Name__c</fullName>
        <label>Object API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_ES_Object_Name__c</fullName>
        <label>Object Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_ES_Parent_Object__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Object</label>
        <referenceTo>GE_ES_Custom_Clone__c</referenceTo>
        <relationshipLabel>Custom Clones</relationshipLabel>
        <relationshipName>Custom_Clones</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GE_ES_Record_Type__c</fullName>
        <label>Record Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_ES_Where_Field__c</fullName>
        <description>This is the field API name on the child object which refers to the parent object.</description>
        <label>Where Field</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_HQ_SFDC_LEGACY_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>SFDC Legacy ID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Custom Clone</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>GE_ES_Object_Name__c</columns>
        <columns>GE_ES_Object_API_Name__c</columns>
        <columns>GE_ES_Record_Type__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <columns>NAME</columns>
        <columns>GE_ES_Object_API_Name__c</columns>
        <columns>GE_ES_Object_Name__c</columns>
        <columns>GE_ES_Parent_Object__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>C-{0000000}</displayFormat>
        <label>Custom Clone Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Custom Clones</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>